# hermes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
notebooks/: local_testing.ipynb
scripts/: install_open_tofu.sh
src/hermes/: main.py
src/hermes/connectors/: database.py  schema.py
src/hermes/connectors/sql_connector/: database.py  models.py  schema.py  schemas.py
src/hermes/frontend/: frontend.py
src/hermes/nodes/: crud.py  project_logging.py  schema.py
src/hermes/routers/: auth.py  crud.py  health_check.py  root.py
src/hermes/ui/: app.py
tests/nodes/: test_project_logging.py
